Configuration of voltage target priority (#955)
Signed-off-by: parvy <pierre.arvy@artelys.com>
Signed-off-by: Hadrien <hadrien.godard@artelys.com>
Signed-off-by: Damien Jeandemange <damien.jeandemange@artelys.com>
Signed-off-by: Anne Tilloy <anne.tilloy@rte-france.com>
Co-authored-by: Hadrien <hadrien.godard@artelys.com>
Co-authored-by: jeandemanged <damien.jeandemange@artelys.com>
Co-authored-by: Anne Tilloy <anne.tilloy@rte-france.com>