@@ -55,7 +55,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
     public static List<LfBus> getControlledBusesOutOfDeadband(IncrementalContextData contextData) {
         return IncrementalContextData.getControlledBuses(contextData.getCandidateControlledBuses(), VoltageControl.Type.TRANSFORMER).stream()
                 .filter(bus -> isOutOfDeadband(bus.getTransformerVoltageControl().orElseThrow()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<LfBranch> getControllerElementsOutOfDeadband(List<LfBus> controlledBusesOutOfDeadband) {
@@ -63,7 +63,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
                 .flatMap(bus -> bus.getTransformerVoltageControl().orElseThrow().getMergedControllerElements().stream())
                 .filter(Predicate.not(LfBranch::isDisabled))
                 .filter(LfBranch::isConnectedAtBothSides)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public static List<LfBranch> getControllerElements(IncrementalContextData contextData) {
@@ -150,7 +150,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
 
         List<Integer> previousTapPositions = controllerBranches.stream()
                 .map(controllerBranch -> controllerBranch.getPiModel().getTapPosition())
-                .collect(Collectors.toList());
+                .toList();
 
         // several transformers control the same bus, to give to chance to all controllers to adjust controlled bus
         // voltage and to help distributing tap changes among all controllers, we try to adjust voltage by allowing
@@ -200,7 +200,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
     }
 
     private static double getDiffV(TransformerVoltageControl voltageControl) {
-        double targetV = voltageControl.getControlledBus().getHighestPriorityMainVoltageControl().orElseThrow().getTargetValue();
+        double targetV = voltageControl.getControlledBus().getHighestPriorityTargetV().orElseThrow();
         double v = voltageControl.getControlledBus().getV();
         return targetV - v;
     }
@@ -212,7 +212,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
         if (outOfDeadband) {
             List<LfBranch> controllers = voltageControl.getMergedControllerElements().stream()
                     .filter(b -> !b.isDisabled())
-                    .collect(Collectors.toList());
+                    .toList();
             LOGGER.trace("Controlled bus '{}' ({} controllers) is outside of its deadband (half is {} kV) and could need a voltage adjustment of {} kV",
                     voltageControl.getControlledBus().getId(), controllers.size(), halfTargetDeadband * voltageControl.getControlledBus().getNominalV(),
                     diffV * voltageControl.getControlledBus().getNominalV());
@@ -250,7 +250,7 @@ public class IncrementalTransformerVoltageControlOuterLoop extends AbstractTrans
             double halfTargetDeadband = getHalfTargetDeadband(voltageControl);
             List<LfBranch> controllers = voltageControl.getMergedControllerElements().stream()
                     .filter(b -> !b.isDisabled())
-                    .collect(Collectors.toList());
+                    .toList();
             boolean adjusted;
             if (controllers.size() == 1) {
                 adjusted = adjustWithOneController(controllers.get(0), controlledBus, contextData, sensitivityContext, diffV, controlledBusesWithAllItsControllersToLimit);
